--- a/BehanceSoul/angular.json
+++ b/BehanceSoul/angular.json
@@ -29,12 +29,7 @@
             "styles": [
               "src/styles.scss"
             ],
-            "scripts": [],
-            "stylePreprocessorOptions": {
-              "includePaths": [
-                "src/styles.scss"
-              ]
-            }
+            "scripts": []
           },
           "configurations": {
             "production": {
